--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-keychain": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
