--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-keychain": "^8.1.1"
   },
   "jest": {
     "preset": "react-native",
