--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-keychain": "^8.1.1"
+    "react-native-keychain": "^8.1.1",
+    "react-native-get-random-values": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
