--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-keychain": "^8.1.1"
+    "react-native-keychain": "^8.1.1",
+    "react-native-get-random-values": "^1.8.0"
   },
   "jest": {
     "preset": "react-native",
