--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "react-native": "0.70.5",
     "react-native-builder-bob": "^0.20.1",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "react-native-keychain": "^8.1.1",
+    "react-native-get-random-values": "^1.8.0"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -156,6 +158,10 @@
     ]
   },
   "dependencies": {
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "@maticnetwork/maticjs": "^3.5.0",
+    "@maticnetwork/maticjs-ethers": "^1.0.2",
+    "ethers": "^5.7.2",
+    "@ethersproject/shims": "^5.7.0"
   }
 }
