--- a/example/package.json
+++ b/example/package.json
@@ -9,15 +9,19 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-keychain": "^8.1.1",
-    "react-native-get-random-values": "^1.8.0"
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-keychain": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "metro-react-native-babel-preset": "0.72.3",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "0.72.3"
+  },
+  "react-native":{
+    "http": "@tradle/react-native-http"
   }
 }
