--- a/package.json
+++ b/package.json
@@ -163,7 +163,10 @@
     "@maticnetwork/maticjs-ethers": "^1.0.2",
     "@opengsn/common": "^3.0.0-beta.1",
     "@opengsn/provider": "^3.0.0-beta.1",
+    "crypto": "^1.0.1",
     "ethers": "^5.7.2",
+    "events": "^3.3.0",
+    "web3": "^1.8.1",
     "yarn": "^1.22.19"
   }
 }
