--- a/example/package.json
+++ b/example/package.json
@@ -6,22 +6,60 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "pods": "pod-install --quiet",
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,http,https,os,assert,url,stream,events,fs --hack --yarn"
   },
   "dependencies": {
-    "@tradle/react-native-http": "^2.0.1",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
+    "asyncstorage-down": "^4.2.0",
+    "base-64": "^1.0.0",
+    "events": "^1.0.0",
+    "https-browserify": "~0.0.0",
+    "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.6",
+    "react-native-crypto": "^2.1.0",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1"
+    "react-native-keychain": "^8.1.1",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.6.1",
+    "readable-stream": "1.0.33",
+    "stream-browserify": "^1.0.0",
+    "url": "~0.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "0.72.3"
+    "metro-react-native-babel-preset": "0.72.3",
+    "rn-nodeify": "^10.3.0"
   },
   "react-native": {
-    "http": "@tradle/react-native-http"
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
   }
 }
