--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
   "source": "src/index",
+  "react-native":"src/index",
   "files": [
     "src",
     "lib",
@@ -73,7 +73,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2" 
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -82,7 +82,14 @@
     "react": "*",
     "react-native": "*",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1"
+    "react-native-keychain": "^8.1.1",
+    "react-native-os": "^1.2.6",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "react-native-level-fs": "^3.0.0",
+    "@tradle/react-native-http": "^2.0.1",
+    "events": "^1.0.0",
+    "https-browserify": "^0.0.1"
   },
   "jest": {
     "preset": "react-native",
@@ -161,12 +168,10 @@
     "@ethersproject/shims": "^5.7.0",
     "@maticnetwork/maticjs": "^3.5.0",
     "@maticnetwork/maticjs-ethers": "^1.0.2",
-    "@opengsn/common": "^3.0.0-beta.1",
     "@opengsn/provider": "^3.0.0-beta.1",
-    "crypto": "^1.0.1",
     "ethers": "^5.7.2",
-    "events": "^3.3.0",
-    "web3": "^1.8.1",
-    "yarn": "^1.22.19"
+    "react-native-crypto": "^2.1.0",
+    "react-native-randombytes": "^3.0.0",
+    "web3": "^1.8.1"
   }
 }
