--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "source": "src/index",
-  "react-native":"src/index",
+  "react-native": "src/index",
   "files": [
     "src",
     "lib",
@@ -73,7 +73,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2" 
+    "typescript": "^4.5.2"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -82,14 +82,7 @@
     "react": "*",
     "react-native": "*",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1",
-    "react-native-os": "^1.2.6",
-    "readable-stream": "^1.0.33",
-    "stream-browserify": "^1.0.0",
-    "react-native-level-fs": "^3.0.0",
-    "@tradle/react-native-http": "^2.0.1",
-    "events": "^1.0.0",
-    "https-browserify": "^0.0.1"
+    "react-native-keychain": "^8.1.1"
   },
   "jest": {
     "preset": "react-native",
@@ -168,10 +161,9 @@
     "@ethersproject/shims": "^5.7.0",
     "@maticnetwork/maticjs": "^3.5.0",
     "@maticnetwork/maticjs-ethers": "^1.0.2",
-    "@opengsn/provider": "^3.0.0-beta.1",
+    "axios": "^1.2.1",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.2",
-    "react-native-crypto": "^2.1.0",
-    "react-native-randombytes": "^3.0.0",
-    "web3": "^1.8.1"
+    "yarn": "^1.22.19"
   }
 }
