--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1"
+    "react-native-get-random-values": "^1.8.0"
   },
   "jest": {
     "preset": "react-native",
