wrap up api for generating mnemonic and pkey and clean up deps

--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-keychain": "^8.1.1",
-    "react-native-get-random-values": "^1.8.0"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
