add example expo app

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
+    "example-expo": "yarn --cwd example_expo",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build",
-    "bootstrap": "yarn example && yarn install && yarn example pods"
+    "bootstrap": "yarn example && yarn install && yarn example pods",
+    "bootstrap-expo": "yarn example-expo && yarn install"
   },
   "keywords": [
     "react-native",
