Add native code to generate mnemonic and private key  (#13)
* WIP proof of concept for generating wallet mnemonic and pkey in c

* wrap up api for generating mnemonic and pkey and clean up deps

* clean up some nitpicks and pass nil instead of rejection on no mnemonic

* remove log line

* add version of android mnemonic generation without persistance

* remove log line

* tick sdk version for EncryptedSharedPreferences

* add persistence to android using EncryptedSharedPreferencesHelper

* split out hex to int array into own function

* clean up twos complement byte to integer passing

* add warning around RNG

* revert to including rn-get-random, it plays better with expo

* remove shim from tokenfaucet import

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -118,6 +118,8 @@ repositories {
         found = true
       }
     })
+
+    maven { url 'https://jitpack.io' }
   }
 
   if (!found) {
@@ -134,6 +136,15 @@ dependencies {
     //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "com.github.komputing.kethereum:model:0.85.7"
+  implementation "com.github.komputing.kethereum:extensions_kotlin:0.85.7"
+  implementation "com.github.komputing.kethereum:bip39:0.85.7"
+  implementation 'com.github.komputing.kethereum:bip39_wordlist_en:0.85.7'
+  implementation "com.github.komputing.kethereum:bip32:0.85.7"
+  implementation "com.github.komputing.kethereum:crypto_impl_spongycastle:0.85.7"
+  implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
+
+
 // From node_modules
 }
 
