--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rly-network-mobile-sdk",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "description": "test",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -70,8 +70,6 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-builder-bob": "^0.20.1",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
@@ -80,9 +78,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.1.1"
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -164,6 +160,7 @@
     "axios": "^1.2.1",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
+    "react-native-get-random-values": "^1.8.0",
     "yarn": "^1.22.19"
   }
 }
