--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-builder-bob": "^0.20.1",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
@@ -79,10 +79,10 @@
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*",
     "expo": "*",
-    "expo-secure-store": "*"
+    "expo-secure-store": "*",
+    "react": "*",
+    "react-native": "*"
   },
   "peerDependenciesMeta": {
     "expo": {
