add testSkipInCI helper, skip tests in CI that depend on a local node/are too slow

--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/src/__tests__/__utils__/"
     ]
   },
   "commitlint": {
