--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "example-expo": "yarn --cwd example_expo",
-    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build",
+    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build example_expo/android/build example_expo/android/app/build example_expo/ios/build",
     "bootstrap": "yarn example && yarn install && yarn example pods",
     "bootstrap-expo": "yarn example-expo && yarn install"
   },
