--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,7 +41,7 @@ workflows:
       - *yarn_install
       - *run_linter
       - *compile_typescript
-      - *yarn_test
+      - *yarn_test # this happens on every push, so don't need to run full suite here
   publish-npm:
     name: Publish tag to NPM
     max_build_duration: 60
@@ -57,10 +57,25 @@ workflows:
       - *run_linter
       - *compile_typescript
       - *yarn_test_full_suite # make sure to run full suite test for publish workflow
+      - name: Clean and prepare
+        script: yarn clean && yarn prepare
       - name: Authorize npm
         script: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      - name: Publish to npm
-        script: echo "TODO Run npm publish"; cat ~/.npmrc
-      - name: Add git tag
-        script: git tag `cat package.json | jq -r '.version'`-`date +%Y%m%d`
-      # TODO: push tag to github
+      # FYI github also needs to be authorized for yarn release, but that's just done with $GITHUB_TOKEN env var
+      - name: Release # TODO: remove the -dry-run once this is tested more
+        # Defaults to `patch` type release. To override, set $RELEASE_INCREMENT_OVERRIDE (e.g. "minor" "major" etc)
+        # and $RELEASE_OVERRIDE_VERSION (to current version) in codemagic env vars
+        script: |
+          if [ $RELEASE_INCREMENT_OVERRIDE ]
+          then
+            if [ `cat package.json | jq -r '.version'` != $RELEASE_OVERRIDE_VERSION ]
+            then
+              echo Override version $RELEASE_OVERRIDE_VERSION does not match current version `cat package.json | jq -r '.version'`
+              echo If this is left over from a previous release, just go delete these from the codemagic env vars
+              exit 1
+            else
+              yarn release $RELEASE_INCREMENT_OVERRIDE --ci --dry-run
+            fi
+          else
+            yarn release patch --ci --dry-run
+          fi
