--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -69,11 +69,19 @@ workflows:
     publishing:
       slack:
         channel: '#ci-builds'
-  ios-build:
-    name: Build iOS and check for artifact
+  ios-build-latest-xcode:
+    name: Latest Xcode - Build iOS and check for artifact
     <<: *shared_ios_settings
     environment:
       xcode: latest
+    scripts:
+      - *build_sdk_latest_ios
+      - *build_sdk_previous_ios
+  ios-build-previous-xcode:
+    name: Previous XCode - Build iOS and check for artifact
+    <<: *shared_ios_settings
+    environment:
+      xcode: 13.4
     scripts:
       - *build_sdk_latest_ios
       - *build_sdk_previous_ios
