--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "@maticnetwork/maticjs-ethers": "^1.0.2",
     "axios": "^1.2.1",
     "buffer": "^6.0.3",
-    "ethers": "^5.7.2",
+    "ethers": "5.7.2",
     "react-native-get-random-values": "^1.8.0",
     "yarn": "^1.22.19"
   }
