--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -96,14 +96,31 @@ definitions:
         exit 1
         fi
     - &build_example_android
-      name: Build example android app
+      name: Build example android app (loops multiple gradle + SDK versions)
       script: |
         cd example/android
-        rm -r app/build
-        ./gradlew build
-        if [[ ! -d app/build/generated ]]; then
-        exit 1
-        fi
+        for CURRENT_GRADLE_VERSION in 7.6.1 7.5.1 7.4.2 7.3.3; do
+            echo "#### Setting gradle to version $CURRENT_GRADLE_VERSION ####"
+            ./gradlew wrapper --gradle-version=$CURRENT_GRADLE_VERSION
+            if [[ ! `./gradlew --version | grep "Gradle $CURRENT_GRADLE_VERSION"` ]]; then
+                echo "#### Setting gradle version to $CURRENT_GRADLE_VERSION failed ####"
+                exit 1
+            fi
+            for CURRENT_SDK_VERSION in 33 32 31; do
+                rm -r app/build
+                echo "#### Setting SDK to version $CURRENT_SDK_VERSION ####"
+                sed -i '' -e "s/compileSdkVersion = [0-9]*$/compileSdkVersion = $CURRENT_SDK_VERSION/g" build.gradle
+                if [[ ! `cat build.gradle | grep "compileSdkVersion = $CURRENT_SDK_VERSION"` ]]; then
+                    echo "#### Setting SDK version to $CURRENT_SDK_VERSION failed ####"
+                    exit 1
+                fi
+                ./gradlew build
+                if [[ ! -d app/build/generated ]]; then
+                    echo "#### Error building with gradle $CURRENT_GRADLE_VERSION and SDK version $CURRENT_SDK_VERSION ####"
+                    exit 1
+                fi
+            done
+        done
 
 workflows:
   pre-build:
@@ -185,6 +202,7 @@ workflows:
   example-app-android:
     name: Build example android app
     <<: *shared_android_settings
+    <<: *trigger_on_all_push
     scripts:
       - *yarn_install
       - *yarn_bootstrap_example
