--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,6 +26,9 @@ definitions:
     - &yarn_install
       name: Yarn install
       script: yarn install
+    - &setup_example_app_config
+      name: Setup example app config
+      script: cp example/private_config.example example/src/private_config.ts
     - &yarn_bootstrap_example
       name: Yarn bootstrap (bare RN example app)
       script: yarn bootstrap
@@ -141,6 +144,7 @@ workflows:
     <<: *trigger_on_all_push
     scripts:
       - *yarn_install
+      - *setup_example_app_config
       - *run_linter
       - *compile_typescript
       - *yarn_test # this happens on every push, so don't need to run full suite here
@@ -238,6 +242,7 @@ workflows:
       - name: Abort if not on main
         script: if [[ `git rev-parse --abbrev-ref HEAD` != main ]]; then exit 1; fi
       - *yarn_install
+      - *setup_example_app_config
       - *run_linter
       - *compile_typescript
       - *yarn_test_full_suite # make sure to run full suite test for publish workflow
