--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -220,7 +220,7 @@ workflows:
         - $CM_BUILD_DIR/node_modules
     scripts:
       - name: Abort if not on main
-        script: if [ `git rev-parse --abbrev-ref HEAD` != main ]; then exit 1; fi
+        script: if [[ `git rev-parse --abbrev-ref HEAD` != main ]]; then exit 1; fi
       - *yarn_install
       - *run_linter
       - *compile_typescript
@@ -234,15 +234,13 @@ workflows:
         # Defaults to `patch` type release. To override, set $RELEASE_INCREMENT_OVERRIDE (e.g. "minor" "major" etc)
         # and $RELEASE_OVERRIDE_VERSION (to current version) in codemagic env vars
         script: |
-          if [ $RELEASE_INCREMENT_OVERRIDE ]
-          then
-            if [ `cat package.json | jq -r '.version'` != $RELEASE_OVERRIDE_VERSION ]
-            then
+          if [[ $RELEASE_INCREMENT_OVERRIDE ]]; then
+            if [[ `cat package.json | jq -r '.version'` = $RELEASE_OVERRIDE_VERSION ]]; then
+              yarn release $RELEASE_INCREMENT_OVERRIDE --ci
+            else
               echo Override version $RELEASE_OVERRIDE_VERSION does not match current version `cat package.json | jq -r '.version'`
               echo If this is left over from a previous release, just go delete these from the codemagic env vars
               exit 1
-            else
-              yarn release $RELEASE_INCREMENT_OVERRIDE --ci
             fi
           else
             yarn release patch --ci
