Update SDK to use hosted transaction infrastructure (#94)
* SDK now designed to send requests using API keys to Rally Protocol hosted transaction infrastructure. 
* Example apps have been updated to pull API keys from private config files, with accompanying example files.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,7 +28,10 @@ definitions:
       script: yarn install
     - &yarn_bootstrap_example
       name: Yarn bootstrap (bare RN example app)
-      script: yarn bootstrap
+      script: yarn bootstrap && cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
+    - &setup_private_config
+      name: Setup private config files
+      script: cp example/private_config.example example/src/private_config.ts && cp example_expo/private_config.example example_expo/src/private_config.ts
     - &run_linter
       name: Run linter
       script: yarn lint
@@ -141,6 +144,7 @@ workflows:
     <<: *trigger_on_all_push
     scripts:
       - *yarn_install
+      - *setup_private_config
       - *run_linter
       - *compile_typescript
       - *yarn_test # this happens on every push, so don't need to run full suite here
@@ -238,6 +242,7 @@ workflows:
       - name: Abort if not on main
         script: if [[ `git rev-parse --abbrev-ref HEAD` != main ]]; then exit 1; fi
       - *yarn_install
+      - *setup_private_config
       - *run_linter
       - *compile_typescript
       - *yarn_test_full_suite # make sure to run full suite test for publish workflow
