change name from core-sdk to gasless-transaction-sdk
is less ambiguous and doesnt force us to put unrelated arbitrary future functionality
into a "core-sdk"

--- a/gasless-transaction-sdk/package.json
+++ b/gasless-transaction-sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rly-network/core-sdk",
+  "name": "@rly-network/gasless-transaction-sdk",
   "version": "0.1.0",
   "description": "Shared SDK for core GSN and RLY network functionality",
   "main": "src/index",
