--- a/gasless-transaction-sdk/tsconfig.json
+++ b/gasless-transaction-sdk/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@rly-network/core-sdk": ["./src/index"]
+      "@rly-network/gasless-transaction-sdk": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
