minor refactor of shared codemagic methods in npm-publish

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -162,6 +162,15 @@ definitions:
     - &setup_build_example_expo_android
       name: Setup build example expo android app
       script: echo "example_expo/android" > .cur_android_build_dir
+    - &npm_publish_authorize_npm
+      name: Authorize npm
+      script: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
+    - &npm_publish_authorize_github
+      # In theory `yarn release` should work without this step (with just the $GITHUB_TOKEN env var),
+      # but something in the codemagic is overriding the auth for git push, so this forces it back to using the
+      # github token
+      name: Authorize git push
+      script: git remote set-url origin https://rly-network-ci-bot:$GITHUB_TOKEN@github.com/rally-dfs/rly-network-mobile-sdk
 
 workflows:
   ######################################
@@ -390,13 +399,8 @@ workflows:
       - *yarn_test_full_suite # make sure to run full suite test for publish workflow
       - name: Clean and prepare
         script: yarn clean && yarn prepare
-      - name: Authorize npm
-        script: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      # In theory `yarn release` should work without this step (with just the $GITHUB_TOKEN env var),
-      # but something in the codemagic is overriding the auth for git push, so this forces it back to using the
-      # github token
-      - name: Authorize git push
-        script: git remote set-url origin https://rly-network-ci-bot:$GITHUB_TOKEN@github.com/rally-dfs/rly-network-mobile-sdk
+      - *npm_publish_authorize_npm
+      - *npm_publish_authorize_github
       - name: Release
         # Defaults to `patch` type release. To override, set $RELEASE_INCREMENT_OVERRIDE (e.g. "minor" "major" etc)
         # and $RELEASE_OVERRIDE_VERSION (to current version) in codemagic env vars
@@ -476,13 +480,8 @@ workflows:
       - *run_linter
       - *compile_typescript
       - *yarn_test_full_suite # make sure to run full suite test for publish workflow
-      - name: Authorize npm
-        script: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      # In theory `yarn release` should work without this step (with just the $GITHUB_TOKEN env var),
-      # but something in the codemagic is overriding the auth for git push, so this forces it back to using the
-      # github token
-      - name: Authorize git push
-        script: git remote set-url origin https://rly-network-ci-bot:$GITHUB_TOKEN@github.com/rally-dfs/rly-network-mobile-sdk
+      - *npm_publish_authorize_npm
+      - *npm_publish_authorize_github
       - name: Release
         # Defaults to `patch` type release. To override, set $RELEASE_INCREMENT_OVERRIDE (e.g. "minor" "major" etc)
         # and $RELEASE_OVERRIDE_VERSION (to current version) in codemagic env vars
